# q-binary-search

./: .gitignore  README.md  pyproject.toml
env_setup/: cpu-env.yml  env_check.py  gpu-cuda12.8-env.yml  mac-env.yml
qt/circuit/: __init__.py  abstract_circuit.py
qt/circuit/analyzer/: metrics.py
qt/circuit/option/: circuit_option.py
qt/model/: __init__.py  lin_constr_bin_opt.py
qt/problem/: job_scheduling_problem.py  set_cover_problem.py  traveling_salesman_problem.py
qt/problems/: capital_budgeting_problem.py  cnst_demo.py  facility_location_problem.py  graph_coloring_problem.py  k_partition_problem.py
qt/provider/: __init__.py
qt/solver/exact/: __init__.py  q_binary_search copy.py  q_binary_search.py  q_binary_search_phase_flact_1.py  q_binary_search_phase_flact_2.py
qt/solver/exact/abstract/: __init__.py  exact_circuit.py  exact_solver.py
qt/solver/exact/module/: mcx.py  obj.py  q_dict.py  rsg_plus.py
qt/solver/exact/option/: __init__.py  circuit_option.py
qt/solver/vqa/: __init__.py  choco.py  cyclic.py  hea.py  penalty.py  rasengan.py  rasengan_segmented.py
qt/solver/vqa/abstract/: __init__.py  explorer.py  optimizer.py  vqa_circuit.py  vqa_solver.py
qt/solver/vqa/circuit_decompose/: circuit_components.py  hdi_decompose.py
qt/solver/vqa/data_analyzer/: data_analyzer.py
qt/solver/vqa/explorer/: __init__.py  choco_explorer.py  qto_explorer.py  qto_test_explorer.py
qt/utils/: get_phase.py
test/exact_test/: testbed_1.py
test/others/: 1.ipynb  2.ipynb
test/vqa_test/: testbed_1.py  testbed_2.py  testbed_3.py  testbed_4.py
(+6 files in other folders)
